Fixed index page layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,206 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 18px;
+}
 
 
+
+
+
+
+
+
+
+
+/* Your code starts here! */
+
+
+
+
+
+
+
+
+
+
+body {
+	max-width: 880px;
+	width: 90vw;
+	margin: 0 auto;
+}
+
+
+
+/*header-start*/
+header {
+	margin: 20px 0 36px 0;
+    border-bottom: 2px solid black;
+    display: flex;
+    flex-direction: column;
+}
+nav, .services-header-img, header h1, header p {
+    margin: 7px 0 0 0;
+}
+header .logo {
+    margin-left: 15px;
+}
+nav {
+	display: flex;
+	justify-content: space-between;
+}
+nav .nav{
+	text-decoration: none;
+	color: rgb(173, 173, 173);
+	font-size: 16px;
+	/* padding: 0 5px; */
+	transition: .1s ease-in;
+	display: flex;
+	align-items: center;
+	margin: 5px 0 0 0;
+}
+nav .nav:hover {
+	border-radius: 2px;
+}
+section {
+	display: flex;
+	margin-bottom: 72px;
+	margin-top: 43px;
+}
+.txtNbtn {
+	width: 50%;
+	text-align: center;
+	margin-left: 0px;
+}
+.txtNbtn h1 {
+    margin: 82px 0 24px 126px;
+    font-size: 72px;
+}
+.centered a {
+	display: block;
+	text-decoration: none;
+	color: black;
+	font-size: 17px;
+	border: 1px solid rgb(175, 175, 175);
+	width: 170px;
+	padding: 7px 0;
+	margin: 0 0 0 188px;
+	transition: .1s ease-in;
+}
+.centered a:hover, nav .nav:hover {
+	color: white;
+	background-color: rgb(97, 97, 97);
+	transform: scale(1.1);
+	border-radius: 5px;
+}
+.rnd-img {
+	/* width: 400px; */
+	/* text-align: center; */
+	/* display: block; */
+	margin-left: auto;
+}
+.rnd-img img {
+	width: 378px;
+	padding: 30px 0 0 0px;
+}
+/* end header */
+
+/*main start */
+main, footer {
+	font-size: 100%;
+}
+main{
+    border-bottom: 2px solid black;
+    padding-bottom: 8px;
+    margin-bottom: 32px;
+}
+.sec1, .sec2 {
+	text-align: left;
+	margin-top: 27px;
+	margin-bottom: 38px;
+}
+.cont, .cont2 {
+	width: 50%;
+	position: relative;
+	padding: 0 10px 0 0;
+}
+main img {
+	width: 100%;
+}
+.cont2 {
+	width: 33.33%;
+}
+/*main end*/
+
+/*footer start*/
+footer {
+	border: none;
+	text-align: center;
+}
+footer section {
+	text-align: left;
+	margin-top: 20px;
+    flex-direction: column;
+    margin-bottom: 36px;
+}
+/*footer end*/
